# approzium

./: .gitignore  .readthedocs.yml  Dockerfile  Makefile  README.md  dbauth.c  dbauth.h  docker-compose.test.yml  docker-compose.yml  libpqpatch.diff  main.c  main.py  sql_driver.go
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  SECURITY.md
.github/workflows/: lint.yml  main.yml  pages-test.yml  pagesdeploy.yml  release.yml  reusable-docsbuild.yml  test.yml
authenticator/: .goreleaser.yml  Dockerfile  Makefile  README.md  approzium.config.yml  approzium_config.yml  authdata.go  authenticator.go  authenticator_test.go  client.go  go.mod  go.sum  main.go  main_test.go
authenticator/credmgrs/: credmgr.go  hc_vault.go  hc_vault_test.go  local_file.go
authenticator/messages/: authenticator.pb-c.c  authenticator.pb-c.h  authenticator.pb.go  authenticator.proto  test.sh
authenticator/protos/: authenticator.pb.go  authenticator.proto
authenticator/scripts/: build.sh  getshas.sh  gofmtcheck.sh
authenticator/server/: authenticator.go  authenticator_test.go  config.go  config_test.go  health.go  requestcontext.go  requestlogger.go  requestmetrics.go  requesttracing.go
authenticator/testing/: approzium.key  approzium.pem  ca.key  client.key  client.pem  prometheus.txt  secrets.yaml  testutil.go
cli/approzium/: Makefile  README.md  go.mod  go.sum  main.go  main_test.go
docs/: .gitignore  Makefile  README.md  docusaurus.config.js  doczrc.js  gatsby-node.js  package.json  sidebars.js
docs/docs/: architecture.mdx  (+11 more)
examples/: client.py  dbauth_client.py
sdk/: Dockerfile  Makefile  authenticator.grpc.pb.cc  authenticator.grpc.pb.h  authenticator.pb.cc  authenticator.pb.h  dbauth_client.cc  dbauth_client.h  libpqpatch.diff  main.c
sdk/python/: .flake8  Makefile  README.md  client.py  pyproject.toml  pytest.ini  setup.py  tox.ini
sdk/python/approzium/: __init__.py  _authenticator.py  _iam.py  _misc.py  _psycopg2_ctypes.py  _psycopg2_scram.py  _psycopg2_utils.c  _socketfromfd.py  authenticator.py  experiment.py  iam.py  misc.py  pg_scram.pyx  psycopg2.py  socketfromfd.py
sdk/python/approzium/_mysql/: __init__.py
sdk/python/approzium/_postgres/: __init__.py
sdk/python/approzium/_protos/: authenticator_pb2.py  authenticator_pb2_grpc.py
sdk/python/approzium/asyncpg/: __init__.py  _asyncpg_connect.py  pool.py
sdk/python/approzium/mysql/connector/: __init__.py  _connect.py  pooling.py
sdk/python/approzium/opentelemetry/: __init__.py
sdk/python/approzium/protos/: authenticator_pb2.py  authenticator_pb2_grpc.py
sdk/python/approzium/psycopg2/: __init__.py  _psycopg2_connect.py  _psycopg2_ctypes.py  pool.py
sdk/python/approzium/pymysql/: __init__.py  _connect.py
sdk/python/docs/source/: api.rst  approzium.asyncpg.rst  approzium.psycopg2.rst  approzium.rst  conf.py  examples.rst  getting-started.rst  index.rst  modules.rst  userguide.rst
sdk/python/examples/: asyncpg.py  asyncpg_client.py  asyncpg_connect.py  asyncpg_pool.py  mysql_connect.py  mysql_connector.py  mysql_connector_connect.py  mysql_pool.py  pg2_client.py  pg2_opentelemetry.py  pg2_pool.py  psycopg2.py  psycopg2_attribution_info.py  psycopg2_connect.py  psycopg2_opentelemetry.py  pymysql_connect.py
sdk/python/tests/: conftest.py  run_pg2_testsuite.py  test__postgres.py  test_approzium_sdk.py  test_asyncpg_connect.py  test_mysql_connect.py  test_mysql_connector_connect.py  test_psycopg2_connect.py  test_pymysql_connect.py
ssl/: Dockerfile  gen_cert.sh
(+114 files in other folders)
